Package_Tools/include-C/at-spi-2.0/atspi/in_arbeit/pp/atspi_enum_types.pp


unit atspi_enum_types;
interface

{
  Automatically converted by H2Pas 1.0.0 from atspi_enum_types.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    atspi_enum_types.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses.  }
{$ifndef __ATSPI_ENUM_TYPES_H__}
{$define __ATSPI_ENUM_TYPES_H__}
{$include <glib-object.h>}
{ Enumerations from "atspi-constants.h"  }

{ was #define dname def_expr }
function ATSPI_TYPE_LOCALE_TYPE : longint; { return type might be wrong }

function atspi_locale_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_COORD_TYPE : longint; { return type might be wrong }

function atspi_coord_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_COLLECTION_SORT_ORDER : longint; { return type might be wrong }

function atspi_collection_sort_order_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_COLLECTION_MATCH_TYPE : longint; { return type might be wrong }

function atspi_collection_match_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_COLLECTION_TREE_TRAVERSAL_TYPE : longint; { return type might be wrong }

function atspi_collection_tree_traversal_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_COMPONENT_LAYER : longint; { return type might be wrong }

function atspi_component_layer_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_TEXT_BOUNDARY_TYPE : longint; { return type might be wrong }

function atspi_text_boundary_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_TEXT_GRANULARITY : longint; { return type might be wrong }

function atspi_text_granularity_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_TEXT_CLIP_TYPE : longint; { return type might be wrong }

function atspi_text_clip_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_STATE_TYPE : longint; { return type might be wrong }

function atspi_state_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_KEY_EVENT_TYPE : longint; { return type might be wrong }

function atspi_key_event_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_EVENT_TYPE : longint; { return type might be wrong }

function atspi_event_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_KEY_SYNTH_TYPE : longint; { return type might be wrong }

function atspi_key_synth_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_MODIFIER_TYPE : longint; { return type might be wrong }

function atspi_modifier_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_RELATION_TYPE : longint; { return type might be wrong }

function atspi_relation_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_ROLE : longint; { return type might be wrong }

function atspi_role_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_CACHE : longint; { return type might be wrong }

function atspi_cache_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_SCROLL_TYPE : longint; { return type might be wrong }

function atspi_scroll_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function ATSPI_TYPE_LIVE : longint; { return type might be wrong }

function atspi_live_get_type:TGType;cdecl;external;
{ Enumerations from "atspi-types.h"  }
{ was #define dname def_expr }
function ATSPI_TYPE_KEY_LISTENER_SYNC_TYPE : longint; { return type might be wrong }

function atspi_key_listener_sync_type_get_type:TGType;cdecl;external;
{$endif}
{ __ATSPI_ENUM_TYPES_H__  }
{ Generated data ends here  }

implementation

{ was #define dname def_expr }
function ATSPI_TYPE_LOCALE_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_LOCALE_TYPE:=atspi_locale_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_COORD_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_COORD_TYPE:=atspi_coord_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_COLLECTION_SORT_ORDER : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_COLLECTION_SORT_ORDER:=atspi_collection_sort_order_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_COLLECTION_MATCH_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_COLLECTION_MATCH_TYPE:=atspi_collection_match_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_COLLECTION_TREE_TRAVERSAL_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_COLLECTION_TREE_TRAVERSAL_TYPE:=atspi_collection_tree_traversal_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_COMPONENT_LAYER : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_COMPONENT_LAYER:=atspi_component_layer_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_TEXT_BOUNDARY_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_TEXT_BOUNDARY_TYPE:=atspi_text_boundary_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_TEXT_GRANULARITY : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_TEXT_GRANULARITY:=atspi_text_granularity_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_TEXT_CLIP_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_TEXT_CLIP_TYPE:=atspi_text_clip_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_STATE_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_STATE_TYPE:=atspi_state_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_KEY_EVENT_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_KEY_EVENT_TYPE:=atspi_key_event_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_EVENT_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_EVENT_TYPE:=atspi_event_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_KEY_SYNTH_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_KEY_SYNTH_TYPE:=atspi_key_synth_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_MODIFIER_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_MODIFIER_TYPE:=atspi_modifier_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_RELATION_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_RELATION_TYPE:=atspi_relation_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_ROLE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_ROLE:=atspi_role_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_CACHE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_CACHE:=atspi_cache_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_SCROLL_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_SCROLL_TYPE:=atspi_scroll_type_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_LIVE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_LIVE:=atspi_live_get_type;
  end;

{ was #define dname def_expr }
function ATSPI_TYPE_KEY_LISTENER_SYNC_TYPE : longint; { return type might be wrong }
  begin
    ATSPI_TYPE_KEY_LISTENER_SYNC_TYPE:=atspi_key_listener_sync_type_get_type;
  end;


end.
